[package]
name = "opencl"
version = "0.2.0"
authors = [ "Colin Sherratt <colin.sherratt@gmail.com>",
    		"Eric Holk <eholk@cs.indiana.edu>",
    		"Ian Daniher <it.daniher@gmail.com>",
    		"Luqman Aden <me@luqman.ca>",
    		"Milinda Pathirage <milinda.pathirage@gmail.com>",
    		"Sébastien Crozet <developer@crozet.re>",
    		"Mathijs Henquet <mathijs.henquet@gmail.com>"
    	  ]
