[package]
name = "opencl"
version = "0.3.0-dev"
authors = [ "Colin Sherratt <colin.sherratt@gmail.com>",
            "Eric Holk <eholk@cs.indiana.edu>",
            "Ian Daniher <it.daniher@gmail.com>",
            "Luqman Aden <me@luqman.ca>",
            "Milinda Pathirage <milinda.pathirage@gmail.com>",
            "Sébastien Crozet <developer@crozet.re>",
            "Mathijs Henquet <mathijs.henquet@gmail.com>"
          ]
repository = "https://github.com/luqmana/rust-opencl"
license = "MIT/Apache-2.0"
description = "OpenCL bindings for Rust."
keywords = ["opencl", "bindings", "ffi", "gpu", "compute"]

[lib]
name = "opencl"

[[example]]
name = "demo"
path = "examples/demo/main.rs"

[[example]]
name = "platform"
path = "examples/platform/main.rs"

[dependencies]
log = "^0.2.3"
