[package]
name = "opencl"
version = "0.5.0"
authors = [ "Colin Sherratt <colin.sherratt@gmail.com>",
            "Eric Holk <eholk@cs.indiana.edu>",
            "Ian Daniher <it.daniher@gmail.com>",
            "Luqman Aden <me@luqman.ca>",
            "Milinda Pathirage <milinda.pathirage@gmail.com>",
            "Sébastien Crozet <developer@crozet.re>",
            "Mathijs Henquet <mathijs.henquet@gmail.com>",
            "Clément Renault <renault.cle@gmail.com>"
          ]
repository = "https://github.com/Kerosene2000/rust-opencl"
license = "MIT/Apache-2.0"
description = "OpenCL bindings for Rust."
keywords = ["opencl", "bindings", "ffi", "gpu", "compute"]

[lib]
name = "opencl"

[[example]]
name = "addition"
path = "examples/addition.rs"

[[example]]
name = "platform"
path = "examples/platform.rs"

[[example]]
name = "histogram"
path = "examples/histogram.rs"

[dependencies]
log      = "0.3.1"
libc     = "0.1.8"
bitflags = "0.5.0"
